Добавляет получение доступного для аренды транспорта
