# docs/swagger.json
@@ -859,6 +859,76 @@
                 }
             }
         },
+        "/Rent/Transport": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Getting transport available for rent by parameters.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rent"
+                ],
+                "summary": "Get transport list",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "-",
+                        "name": "lat",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "-",
+                        "name": "long",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "-",
+                        "name": "radius",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "-",
+                        "name": "type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetRentTransportOutput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/Transport": {
             "post": {
                 "security": [
@@ -1392,6 +1462,17 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "models.GetRentTransportOutput": {
+            "type": "object",
+            "properties": {
+                "transports": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.GetTransportOutput"
+                    }
                 }
             }
         },
